--- a/color-swap/package.json
+++ b/color-swap/package.json
@@ -11,6 +11,7 @@
   "license": "",
   "devDependencies": {
     "@figma/plugin-typings": "^1.51.0",
+    "@types/node": "^18.7.18",
     "typescript": "*"
   }
 }
