--- a/color-swap/tsconfig.json
+++ b/color-swap/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["es6"],
-    "strict": true,
+    "skipLibCheck": true,
+    "lib": [
+      "es6",
+      "dom",
+      "es2017"
+    ],
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@figma"
